force-app/main/default/objects/Contract/fields/Beneficiario__c.field-meta.xml
<CustomField>
    <fullName>Beneficiario__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Beneficiario</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contratos (Beneficiario)</relationshipLabel>
    <relationshipName>Contratos_Beneficiario</relationshipName>
    <type>Lookup</type>
</CustomField>