force-app/main/default/objects/Contract/fields/Exposicion_del__c.field-meta.xml
<CustomField>
    <fullName>Exposicion_del__c</fullName>
    <label>Exposición %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>