force-app/main/default/objects/Contract/fields/Fin_Contrato_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Fin_Contrato_Vigente__c</fullName>
    <label>Fin contrato vigente</label>
    <type>Date</type>
</CustomField>