force-app/main/default/objects/Contract/fields/Institucion__c.field-meta.xml
<CustomField>
    <fullName>Institucion__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Institución (Afianzadora)</label>
    <referenceTo>Institucion__c</referenceTo>
    <relationshipLabel>Contratos (Afianzadora)</relationshipLabel>
    <relationshipName>Contratos_Std_Institucion</relationshipName>
    <type>Lookup</type>
</CustomField>