force-app/main/default/objects/Contract/fields/Precalificacion__c.field-meta.xml
<CustomField>
    <fullName>Precalificacion__c</fullName>
    <label>Precalificación</label>
    <referenceTo>Precalificacion__c</referenceTo>
    <relationshipLabel>Contratos</relationshipLabel>
    <relationshipName>Contratos</relationshipName>
    <type>Lookup</type>
</CustomField>