force-app/main/default/objects/Contract/fields/Proyecto__c.field-meta.xml
<CustomField>
    <fullName>Proyecto__c</fullName>
    <label>Proyecto / Obra</label>
    <length>255</length>
    <type>Text</type>
</CustomField>