force-app/main/default/objects/Contract/fields/Suma_Fianzas__c.field-meta.xml
<CustomField>
    <fullName>Suma_Fianzas__c</fullName>
    <label>Suma de fianzas vigentes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>