force-app/main/default/objects/Contract/fields/Valor_Contrato_Vigente__c.field-meta.xml
<CustomField>
    <fullName>Valor_Contrato_Vigente__c</fullName>
    <label>Valor contrato vigente</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>