force-app/main/default/objects/Contract/fields/Vendedor__c.field-meta.xml
<CustomField>
    <fullName>Vendedor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vendedor</label>
    <referenceTo>Vendedores__c</referenceTo>
    <relationshipLabel>Contractos</relationshipLabel>
    <relationshipName>Contractos</relationshipName>
    <type>Lookup</type>
</CustomField>